# HF

./: .gitignore  CMakeLists.txt  ConvertBasis.py  HF from scratch.md  README.md  basis.cpp  cpp from scratch.md  main.cpp
FinedBaseSet/: STO-3G.txt
baseset/: 3-21g.txt  6-31g.txt  STO-3G.txt
basis/: STO-3G.txt
include/: Integral.h  Intergal.h  RHF.h  basis.h  gslextra.h  input.h
input_example/: CH4.in  H2O.in  benzene.in  ethonal.in
src/: CMakeLists.txt  Integral.cpp  Intergal.cpp  RHF.cpp  basis.cpp  gslextra.cpp  input.cpp
test/: CMakeLists.txt  HFtest.cpp  TestIntergal.cpp  TestReadBasis.cpp  TestReadInput.cpp
